# Glyph

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTINF.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  test.txt  unique.txt
.github/workflows/: codeql.yml  test.yml
config/: settings.example.json  settings.json
core/: __init__.py  ai_bridge.py  crypto.py  file_handler.py  ipc.py  ipc_schema.py  logger.py  metadata_store.py  orchestrator.py  remote.py
docs/: Makefile
docs/source/: conf.py  index.rst  modules.rst
modules/ai_python/: ai_server.py  requirements.txt
modules/crypto_rust/: Cargo.toml
modules/crypto_rust/src/: main.rs
scripts/: build_rust.sh  load_test.py  run_tests.sh
tests/: test_crypto_module.py  test_metadata.py  test_orchestrator.py
tests/load/: test_load.py
