[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glyph"
version = "0.2.0"
description = "Glyph – безопасная энциклопедия знаний"
readme = "README.md"
authors = [
    {name = "Vladimir Goncharov", email = "wwbtc@icloud.com"},
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
]
requires-python = ">=3.11"
dependencies = [
    # core dependencies
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-benchmark>=4.0,<5.0",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
    "pre-commit>=3.6,<4.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=core --cov-report=term-missing"
pythonpath = ["."]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B404", "B603"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "modules*"]
exclude = ["data*", "logs*", "config*"]

[project.scripts]
glyph = "core.orchestrator:main"
