[package]
name = "crypto_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"   # для AES-GCM, можно использовать и aes
base64 = "0.21"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
